[package]
name = "rust_snuba"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["rust_arroyo"]

[features]
ffi = ["pyo3/extension-module"]

[profile.release]
debug = 1

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "rust_snuba"

# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { version = "1.0.69", features = ["backtrace"] }
cadence = "0.29.1"
chrono = { version = "0.4.26", features = ["serde"] }
ctrlc = "3.2.5"
futures = "0.3.21"
md5 = "0.7.0"
procspawn = { version = "1.0.0", features = ["json"] }
pyo3 = { version = "0.18.1", features = ["chrono"] }
reqwest = "0.11.11"
rust_arroyo = { path = "./rust_arroyo" }
sentry = { version = "0.32.0", features = ["anyhow", "tracing"] }
sentry-kafka-schemas = "0.1.35"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = "1.0"
tokio = { version = "1.19.2", features = ["full"] }
statsdproxy = { version = "0.1.0", features = ["cadence-adapter"], git = "https://github.com/getsentry/statsdproxy", branch = "fix/cadence-avoid-mutex", default-features = false }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
uuid = "1.5.0"
parking_lot = "0.12.1"

[dev-dependencies]
divan = "0.1.2"
once_cell = "1.18.0"
procspawn = { version = "1.0.0", features = ["test-support", "json"] }
pyo3 = { version = "*", features = ["auto-initialize"] }

[[bench]]
name = "processors"
harness = false

[[bin]]
# this is not a proper benchmark since it runs forever.
name = "python-processor-infinite"
path = "bin/python_processor_infinite.rs"
required-features = ["pyo3/auto-initialize"]
