[package]
name = "rust_snuba"
version = "0.1.0"
# Keep in sync with rustfmt in pre-commit-config.yaml
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
ffi = ["pyo3/extension-module"]

[profile.release]
debug = 1

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "rust_snuba"

# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib", "rlib"]

[dependencies]
adler = "1.0.2"
anyhow = { version = "1.0.69", features = ["backtrace"] }
cadence = "0.29.1"
chrono = { version = "0.4.26", features = ["serde"] }
ctrlc = { version = "3.2.5", features = ["termination"] }
data-encoding = "2.5.0"
futures = "0.3.21"
hyper = "1.2.0"
json-schema-diff = "0.1.7"
md5 = "0.7.0"
parking_lot = "0.12.1"
procspawn = { version = "1.0.0", features = ["json"] }
prost = "0.13"
pyo3 = { version = "0.18.1", features = ["chrono"] }
regex = "1.11.1"
reqwest = { version = "0.11.11", features = ["stream"] }
schemars = { version = "0.8.16", features = ["uuid1"] }
sentry = { version = "0.32.0", features = ["anyhow", "tracing"] }
sentry-kafka-schemas = "1.3.7"
sentry_arroyo = { version = "2.22.0", features = ["ssl"] }
sentry_protos = "0.3.0"
sentry_usage_accountant = { version = "0.1.0", features = ["kafka"] }
seq-macro = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_path_to_error = "0.1.15"
serde_with = "3.8.1"
statsdproxy = { version = "0.1.2", features = ["cadence-adapter", "sentry"] }
thiserror = "1.0"
tokio = { version = "1.38.2", features = ["full"] }
tokio-stream = "0.1.15"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
uuid = { version = "1.5.0", features = ["v4", "v7"] }
zstd = "0.12.3"


[dev-dependencies]
scopeguard = "1.2.0"
criterion = "0.5.1"
httpmock = "0.7.0"
prost-types = "0.13.3"
insta = { version = "1.34.0", features = ["json", "redactions"] }
once_cell = "1.18.0"
procspawn = { version = "1.0.0", features = ["test-support", "json"] }
pyo3 = { version = "*", features = ["auto-initialize"] }

[target.'cfg(not(target_env = "msvc"))'.dev-dependencies]
tikv-jemallocator = "0.5"

[[bench]]
name = "processors"
harness = false

[[bin]]
# this is not a proper benchmark since it runs forever.
name = "python-processor-infinite"
path = "bin/python_processor_infinite.rs"
required-features = ["pyo3/auto-initialize"]
