[package]
name = "rust_snuba"
version = "0.1.0"
# Keep in sync with rustfmt in pre-commit-config.yaml
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
ffi = ["pyo3/extension-module"]

[profile.release]
debug = 1

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "rust_snuba"

# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib", "rlib"]

[dependencies]
adler = "1.0.2"
anyhow = { version = "1.0.102", features = ["backtrace"] }
chrono = { version = "0.4.44", features = ["serde"] }
clickhouse = { version = "0.13.3", features = ["uuid"] }
ctrlc = { version = "3.5.2", features = ["termination"] }
data-encoding = "2.10.0"
futures = "0.3.32"
hyper = "1.8.1"
json-schema-diff = "0.1.8"
md5 = "0.7.0"
metrics = "0.24.3"
metrics-exporter-dogstatsd = "0.9.6"
parking_lot = "0.12.5"
procspawn = { version = "1.0.1", features = ["json"] }
prost = "0.14.3"
pyo3 = { version = "0.24.2", features = ["chrono"] }
rand = "0.9.2"
regex = "1.12.3"
reqwest = { version = "0.11.27", features = ["stream"] }
schemars = { version = "0.8.22", features = ["uuid1"] }
sentry = { version = "0.41.0", default-features = false, features = [
    # default features, except `release-health` is disabled
    "backtrace",
    "contexts",
    "debug-images",
    "panic",
    "transport",
    # additional features
    "anyhow",
    "tracing",
    "logs"
] }
sentry-kafka-schemas = "2.1.25"
sentry_protos = "0.8.2"
sentry_arroyo = { version = "2.38.3", features = ["ssl"] }
sentry_usage_accountant = { version = "0.1.2", features = ["kafka"] }
seq-macro = "0.3.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
serde_path_to_error = "0.1.20"
serde_with = "3.17.0"
thiserror = "1.0.69"
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = "0.1.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
uuid = { version = "1.21.0", features = ["v4", "v7"] }
zstd = "0.12.4"
bytes = "1.11.1"


[dev-dependencies]
scopeguard = "1.2.0"
criterion = "0.5.1"
httpmock = "0.7.0"
prost-types = "0.14.3"
insta = { version = "1.46.3", features = ["json", "redactions"] }
once_cell = "1.21.3"
procspawn = { version = "1.0.1", features = ["test-support", "json"] }
pyo3 = { version = "*", features = ["auto-initialize"] }

[target.'cfg(not(target_env = "msvc"))'.dev-dependencies]
tikv-jemallocator = "0.5.4"

[[bench]]
name = "processors"
harness = false

[[bin]]
# this is not a proper benchmark since it runs forever.
name = "python-processor-infinite"
path = "bin/python_processor_infinite.rs"
required-features = ["pyo3/auto-initialize"]
