[tool.uv]
environments = ["sys_platform == 'darwin' or sys_platform == 'linux'"]

[[tool.uv.index]]
# We don't allow using public pypi - submit a PR to
# https://github.com/getsentry/pypi to add a dependency.
url = "https://pypi.devinfra.sentry.io/simple"
default = true

[build-system]
requires = ["maturin==1.4.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]

[project]
name = "rust_snuba"
version = "0.0.0"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
