# maturin version is in Makefile and Dockerfile
# it's easier to keep it contained to uvx in watch-rust-snuba
# rather than define it as a build-backend

[tool.maturin]
features = ["pyo3/extension-module"]

[project]
name = "rust_snuba"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
