[package]
name = "rust_arroyo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = "2.18.0"
env_logger = "0.9.0"
futures = "0.3.21"
once_cell = "1.18.0"
rdkafka = { version = "0.36", features = ["cmake-build"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0"
tokio = { version = "1.19.2", features = ["full"] }
tracing = "0.1.40"
uuid = "0.8"
