[package]
name = "rust_arroyo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
once_cell = "1.18.0"
rand = "0.8.5"
rdkafka = { git = "https://github.com/getsentry/rust-rdkafka", branch = "base-consumer", features = ["cmake-build", "tracing"] }
sentry = { version = "0.32.0" }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0"
tokio = { version = "1.19.2", features = ["full"] }
tracing = "0.1.40"
uuid = "1.5.0"

[dev-dependencies]
tracing-subscriber = "0.3.18"
